    of the ACC and no more of the ACCProxy
  - improved the shutdown and the termination of the JVM
  - removed inheritance between MainContainer and AgentContainer
  - encapsulated the code concerning Mobility into the class MobilityManager
  - encapsulated the code concerning Event Notification into the class 
    NotificationManager


	
MAJOR CHANGES in JADE 2.3 (11 July 2001) 
==========================================================================
- fixed some bugs in the SocketProxyAgent (David Bell, HP Palo Alto)
- implemented the InProcessInterface (jade.wrapper and jade.core.Runtime)
- added the inprocess example
- implemented the IntrospectorAgent
- improved the support for ToolAgents and implemented a new event ontology
- fixed bug in run.bat of the demo because it did not include iiop.jar in
  the CLASSPATH
- Added a sanity check in notifyFailureToSender to avoid NullPointerException 
  when the sender is null
- ACLMessage: removed an additional blank at the end of the content slot.
- ACLMessage: deprecated the two methods setReplyBy and getReplyBy. The
  methods getReplyByDate and setReplyByDate should be used instead.
- MobileAgent example: fixed bug in dealing with the move message
- jade.gui.ServiceDescrDlg fixed bug in the visualization of the Properties
  of a ServiceDescription registered with the DF
- jade.domain.MobilityOntology. removed the actor slot in the classes 
  MoveAction, QueryPlatformLocation and WhereIsAgent 
  (as reported by Nicolas Lhuillier, Motorola Labs Paris)
- Passed the FIPA Compliance Test of Motorola:
  - Catched exception in initfromIOR 
  - Matched the ServiceDescription also against the user-defined properties
- Added the JadeJessProtege example kindly provided by Oliver Hoffmann.
- Added a checkbox to the AID GUI. This checkbox must be checked when local
  names are set instead of GUID (globally unique identifiers).
- Modified the class jade.core.AID that now represents only GUID. Some 